external-crates/move/crates/move-compiler/tests/move_2024/typing/macros_dont_allow_paths.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/typing/macros_dont_allow_paths.move:6:18
  │
6 │         let _m = $s.x; // disallowed
  │                  ^^ Macro parameters are not allowed to appear in paths
  │
  = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let s = $s;'
  = Macro parameters are always treated as value expressions, and are not modified by path operations.
    Path operations include 'move', 'copy', '&', '&mut', and field references

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/typing/macros_dont_allow_paths.move:7:24
  │
7 │         let _vs = &mut $y; // disallowed
  │                        ^^ Macro parameters are not allowed to appear in paths
  │
  = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let y = $y;'
  = Macro parameters are always treated as value expressions, and are not modified by path operations.
    Path operations include 'move', 'copy', '&', '&mut', and field references

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/typing/macros_dont_allow_paths.move:8:19
  │
8 │         let _q = &$n; // disallowed
  │                   ^^ Macro parameters are not allowed to appear in paths
  │
  = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let n = $n;'
  = Macro parameters are always treated as value expressions, and are not modified by path operations.
    Path operations include 'move', 'copy', '&', '&mut', and field references

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/typing/macros_dont_allow_paths.move:9:23
  │
9 │         let _q = copy $n; // disallowed
  │                       ^^ Macro parameters are not allowed to appear in paths
  │
  = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let n = $n;'
  = Macro parameters are always treated as value expressions, and are not modified by path operations.
    Path operations include 'move', 'copy', '&', '&mut', and field references

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/typing/macros_dont_allow_paths.move:10:23
   │
10 │         let _q = move $n; // disallowed
   │                       ^^ Macro parameters are not allowed to appear in paths
   │
   = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let n = $n;'
   = Macro parameters are always treated as value expressions, and are not modified by path operations.
     Path operations include 'move', 'copy', '&', '&mut', and field references
